--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -23,20 +23,22 @@
                 <thead class="thead-inverse">
                     <tr>
                         <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
+                        <th>Name</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                    <tr *ngFor="let devotee of devoteesList; let i = index">
+                        <th scope="row">{{ i + 1 }}</th>
+                        <td>{{devotee.name}}</td>
+                        <td>
+							<button type="button" class="btn btn-warning">Edit</button>
+							<button type="button" style="margin-left:10px;" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>
+						</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
+<template ngbModalContainer></template>
