--- a/angular2/src/app/login/login.component.html
+++ b/angular2/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<form>
-	<h1>Please Enter the Password</h1>
-	<input placeholder="Password" type="text" required=""  [value]="password" (input)="password = $event.target.value">
-	<button (click)="login()">Login</button>
-</form>
+<div>
+    <h1>Please Enter the Password</h1>
+    <input placeholder="Password" type="password" required="" [(ngModel)]="password">
+    <button (click)="login()">Login</button>
+</div>
