--- a/angular2/src/app/admin/form/form.component.html
+++ b/angular2/src/app/admin/form/form.component.html
@@ -2,7 +2,7 @@
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-    <h4 class="modal-title">Add</h4>
+    <h4 class="modal-title">{{type}}</h4>
 </div>
 <div class="modal-body">
     <form class="form-horizontal">
