--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="row" style="margin-top:50px;">
-        <div class="col-lg-12">
+        <div class="col-lg-12">{{devoteesList}}
             <table class="table">
                 <thead class="thead-inverse">
                     <tr>
