--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -1,44 +1,52 @@
 <nav class="navbar navbar-full navbar-fixed-top navbar-dark bg-inverse">
-    <h1 class="navbar-brand">Devotees Management</h1>
-    <div class="nav navbar-nav float-xs-right">
-        <a class="nav-item nav-link" (click)="add()">Add Devotee</a>
-        <a class="nav-item nav-link" (click)="logout()">Logout</a>
-    </div>
+	<h1 class="navbar-brand" style="font-weight:bold">Devotees Management</h1>
+	<div class="nav navbar-nav float-xs-right">
+		<a class="nav-item nav-link" (click)="add()">Add Devotee</a>
+		<a class="nav-item nav-link" (click)="logout()">Logout</a>
+	</div>
 </nav>
 <div class="container-fluid">
-    <div class="row" style="margin-top:100px;">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
-            <div class="input-group">
-                <input [(ngModel)]="searchQuery" type="text" class="form-control" placeholder="Search Devotee">
-                <span class="input-group-btn">
-					<button class="btn btn-secondary" type="button" (click)="search()">Search</button>
-      			</span>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="margin-top:50px;">
-        <div class="col-lg-12">{{devoteesList}}
-            <table class="table">
-                <thead class="thead-inverse">
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let devotee of devoteesList; let i = index">
-                        <th scope="row">{{ i + 1 }}</th>
-                        <td><a (click)="edit(devotee)">{{devotee.name}}</a></td>
-                        <td>
-                            <button (click)="edit(devotee)" type="button" style="margin-left:10px;" class="btn btn-warnign"><i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Edit</button>
-                            <button (click)="delete(devotee.id)" type="button" style="margin-left:10px;" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+	<div class="row" style="margin-top:100px;">
+		<div class="col-lg-3"></div>
+		<div class="col-lg-6">
+			<div class="input-group">
+				<input [(ngModel)]="searchQuery" #query (keyup)="update(query.value)" type="text" class="form-control" placeholder="Search Devotee">
+				<span class="input-group-btn">
+					<button class="btn <btn-sec></btn-sec>ondary" type="button" (click)="search()">Search</button>
+	  			</span>
+			</div>
+		</div>
+	</div>
+	<div class="row" style="margin-top:50px;">
+		<div class="col-lg-12">
+			<div style="text-align:center;font-weight:bold" [hidden]="devoteesList != undefined && devoteesList.length != 0">No Data Available</div>
+			<table class="table" [hidden]="devoteesList == undefined || devoteesList.length == 0">
+				<thead class="thead-inverse">
+					<tr>
+						<th></th>
+						<th>Name</th>
+						<th>Mobile</th>
+						<th>Email</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let devotee of devoteesList">
+						<th scope="row"><i class="fa fa-user" aria-hidden="true" style="margin-right:5px;"></i></th>
+						<td><a (click)="edit(devotee)">{{devotee.name}}</a></td>
+						<td>{{devotee.mobileNumber}}</td>
+						<td>{{devotee.email}}</td>
+						<td>
+							<button (click)="edit(devotee)" type="button" style="margin-left:10px;" class="btn btn-info"><i class="fa fa-pencil" aria-hidden="true" style="margin-right:5px;"></i>Edit</button>
+							<button (click)="delete(devotee.id)" type="button" style="margin-left:10px;" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="col-lg-12" style="text-align:center" [hidden]="devoteesList == undefined || devoteesList.length == 0">
+			<ngb-pagination [collectionSize]="totalPages" [boundaryLinks]="true" [directionLinks]="true" [maxSize]="10" [page]="currentPageNo" [pageSize]="maximumRows" (pageChange)="search($event)"></ngb-pagination>
+		</div>
+	</div>
 </div>
 <template ngbModalContainer></template>
