--- a/angular2/src/app/admin/admin.component.css
+++ b/angular2/src/app/admin/admin.component.css
@@ -1,3 +1,21 @@
 a {
 	cursor: pointer;
 }
+.btn {
+	border-radius: 0px;
+}
+input {
+	border-radius: 0px;
+}
+i {
+	margin-right: 10px;
+}
+.fa-user {
+	font-size: 20px;
+}
+.form-control:focus {
+	border-color:#d9d9d9;
+}
+.dropdown-menu {
+	min-width:225px;
+}
