--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -6,24 +6,53 @@
 	</div>
 </nav>
 <div class="container-fluid">
-	<div class="row" style="margin-top:100px;">
-		<div class="col-lg-3"></div>
+	<div class="row flex-items-xs-center" style="margin-top:100px;">
 		<div class="col-lg-6">
 			<div class="input-group">
 				<input [(ngModel)]="searchQuery" #query (keyup)="update(query.value)" type="text" class="form-control" placeholder="Search Devotee">
 				<span class="input-group-btn">
 					<button class="btn <btn-sec></btn-sec>ondary" type="button" (click)="search()">Search</button>
-	  			</span>
+				</span>
 			</div>
 		</div>
 	</div>
-	<div class="row" style="margin-top:50px;">
+	<div class="row flex-items-xs-right" style="margin-top:50px;margin-bottom:0px;padding-top:0px;padding-bottom:0px">
+		<form role="form" class="form-inline">
+			<div class="form-group" style="margin-right:20px">
+				<label for="sortBy" style="font-weight:bold">Sort By</label>
+				<select [(ngModel)]="sortBy" (change)="search()" class="form-control" id="sortBy" name="sortBy">
+					<option value="name" selected>Name</option>
+					<option value="dob">Date of Birth</option>
+					<option value="baceJoinDate">Bace joining date</option>
+					<option value="baceLeftDate">Bace left date</option>
+				</select>
+			</div>
+			<div class="form-group" style="margin-right:20px">
+				<label for="order" style="font-weight:bold">Order</label>
+				<select [(ngModel)]="order" (change)="search()" class="form-control" id="order" name="order">
+					<option value="ascending" selected>Ascending</option>
+					<option value="descending">Descending</option>
+				</select>
+			</div>
+			<div class="form-group" style="margin-right:20px">
+				<label for="maximumResults" style="font-weight:bold">Maximum Results</label>
+				<select [(ngModel)]="maximumResults" (change)="search()" class="form-control" id="maximumResults" name="maximumResults">
+					<option selected>10</option>
+					<option>20</option>
+					<option>50</option>
+					<option>100</option>
+					<option>200</option>
+				</select>
+			</div>
+		</form>
+	</div>
+	<div class="row" style="margin-top:25px;">
 		<div class="col-lg-12">
-			<div style="text-align:center;font-weight:bold" [hidden]="devoteesList != undefined && devoteesList.length != 0">No Data Available</div>
-			<table class="table" [hidden]="devoteesList == undefined || devoteesList.length == 0">
+			<div style="text-align:center;font-weight:bold;color:#ff5722;margin-top:25px;" [hidden]="devoteesList != undefined && devoteesList.length != 0">No Data Available</div>
+			<table class="table table-hover table-sm" [hidden]="devoteesList == undefined || devoteesList.length == 0">
 				<thead class="thead-inverse">
 					<tr>
-						<th></th>
+						<th>#</th>
 						<th>Name</th>
 						<th>Mobile</th>
 						<th>Email</th>
@@ -31,14 +60,18 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr *ngFor="let devotee of devoteesList">
-						<th scope="row"><i class="fa fa-user" aria-hidden="true" style="margin-right:5px;"></i></th>
-						<td><a (click)="edit(devotee)">{{devotee.name}}</a></td>
+					<tr *ngFor="let devotee of devoteesList; let i = index">
+						<th scope="row">{{(currentPageNo - 1) * maximumRows + i + 1}}</th>
+						<td>
+							<a (click)="edit(devotee)">{{devotee.name}}</a>
+						</td>
 						<td>{{devotee.mobileNumber}}</td>
 						<td>{{devotee.email}}</td>
 						<td>
-							<button (click)="edit(devotee)" type="button" style="margin-left:10px;" class="btn btn-info"><i class="fa fa-pencil" aria-hidden="true" style="margin-right:5px;"></i>Edit</button>
-							<button (click)="delete(devotee.id)" type="button" style="margin-left:10px;" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>
+							<button (click)="edit(devotee)" type="button" style="margin-left:10px;" class="btn btn-info">
+								<i class="fa fa-pencil" aria-hidden="true"></i>Edit</button>
+							<button (click)="delete(devotee.id)" type="button" style="margin-left:10px;" class="btn btn-danger">
+								<i class="fa fa-trash" aria-hidden="true"></i>Delete</button>
 						</td>
 					</tr>
 				</tbody>
