--- a/angular2/src/app/admin/admin.component.css
+++ b/angular2/src/app/admin/admin.component.css
@@ -19,3 +19,9 @@ i {
 .dropdown-menu {
 	min-width:225px;
 }
+select {
+	border-radius: 0px !important;
+	padding-top:4px !important;
+	padding-bottom:4px !important;
+	height: 30px !important;
+}
