--- a/angular2/src/app/admin/admin.component.css
+++ b/angular2/src/app/admin/admin.component.css
@@ -14,10 +14,6 @@ i {
 	font-size: 20px;
 }
 
-.form-control:focus {
-	border-color: #d9d9d9;
-}
-
 .dropdown-menu {
 	min-width: 225px;
 }
@@ -33,4 +29,15 @@ th,
 td {
 	text-align: center;
 	vertical-align: middle;
+}
+.dropdown-menu {
+	padding-left:10px;
+	padding-right: 10px;
+	border-radius: 0px;
+	min-width: 190px;
+	left: -80px;
+}
+.dropdown-menu input {
+	vertical-align: middle;
+	margin-right: 5px;
 }
