--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -49,9 +49,53 @@
 					<label for="filterColumns" data-toggle="dropdown" style="font-weight:bold;cursor:pointer;">Columns</label>
 					<i style="cursor:pointer;font-size: 25px;margin-left: 10px;vertical-align: middle;" class="fa fa-caret-square-o-down" data-toggle="dropdown" aria-hidden="true" id="filterColumns"></i>
 					<ul role="menu" class="dropdown-menu" (click)="$event.stopPropagation()">
-						<li *ngFor="let column of columns">
-							<input type="checkbox" name="column"  [(ngModel)]="column.isActive">
-							<span class="lbl">{{column}}</span>
+						<li>
+							<input type="checkbox" name="column" [checked]="cSerialNumber" (change)="cSerialNumber=!cSerialNumber">
+							<span class="lbl">Serial Number</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cName" (change)="cName=!cName">
+							<span class="lbl">Name</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cbaceJoinDate" (change)="cbaceJoinDate=!cbaceJoinDate">
+							<span class="lbl">Bace Joining Date</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cbaceLeftDate" (change)="cbaceLeftDate=!cbaceLeftDate">
+							<span class="lbl">Bace Left Date</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="ccurrentAddress" (change)="ccurrentAddress=!ccurrentAddress">
+							<span class="lbl">Current Address</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cdob" (change)="cdob=!cdob">
+							<span class="lbl">Date of Birth</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cemail" (change)="cemail=!cemail">
+							<span class="lbl">Email</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cemergencyNumber" (change)="cemergencyNumber=!cemergencyNumber">
+							<span class="lbl">Emergency Number</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cfatherName" (change)="cfatherName=!cfatherName">
+							<span class="lbl">Father's Name</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cmobileNumber" (change)="cmobileNumber=!cmobileNumber">
+							<span class="lbl">Mobile Number</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cpermanentAddress" (change)="cpermanentAddress=!cpermanentAddress">
+							<span class="lbl">Permanent Address</span>
+						</li>
+						<li>
+							<input type="checkbox" name="column" [checked]="cActions" (change)="cActions=!cActions">
+							<span class="lbl">Actions</span>
 						</li>
 					</ul>
 				</div>
@@ -64,26 +108,34 @@
 			<table class="table table-hover table-sm" [hidden]="devoteesList == undefined || devoteesList.length == 0">
 				<thead class="thead-inverse">
 					<tr>
-						<th>#</th>
-						<th>Name</th>
-						<th>Mobile</th>
-						<th>Email</th>
-						<th>Date of Birth</th>
-						<th>Bace Joining Date</th>
-						<th></th>
+						<th [hidden]="!cSerialNumber">#</th>
+						<th [hidden]="!cName" (click)="updateSortOrder('name')" style="cursor:pointer">Name</th>
+						<th [hidden]="!cmobileNumber">Mobile Number</th>
+						<th [hidden]="!cemail">Email</th>
+						<th [hidden]="!cdob" (click)="updateSortOrder('dob')">Date of Birth</th>
+						<th [hidden]="!cbaceJoinDate" (click)="updateSortOrder('baceJoinDate')" style="cursor:pointer">Bace Joining Date</th>
+						<th [hidden]="!cbaceLeftDate" (click)="updateSortOrder('baceLeftDate')" style="cursor:pointer">Bace Left Date</th>
+						<th [hidden]="!cfatherName">Father's Name</th>
+						<th [hidden]="!cemergencyNumber">Emergency Number</th>
+						<th [hidden]="!ccurrentAddress">Current Address</th>
+						<th [hidden]="!cpermanentAddress">Permanent Address</th>
+						<th [hidden]="!cActions"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr *ngFor="let devotee of devoteesList; let i = index">
-						<th scope="row">{{(currentPageNo - 1) * maximumResults + i + 1}}.</th>
-						<td>
-							<a (click)="edit(devotee)" style="1px dotted #373a3c">{{devotee['name']}}</a>
-						</td>
-						<td>{{devotee.mobileNumber}}</td>
-						<td>{{devotee.email}}</td>
-						<td>{{devotee.dob}}</td>
-						<td>{{devotee.baceJoinDate}}</td>
-						<td style="text-align:right;">
+						<th [hidden]="!cSerialNumber" scope="row">{{(currentPageNo - 1) * maximumResults + i + 1}}.</th>
+						<td [hidden]="!cName"><a (click)="edit(devotee)" style="1px dotted #373a3c">{{devotee.name}}</a></td>
+						<td [hidden]="!cmobileNumber">{{devotee.mobileNumber}}</td>
+						<td [hidden]="!cemail">{{devotee.email}}</td>
+						<td [hidden]="!cdob">{{devotee.dob}}</td>
+						<td [hidden]="!cbaceJoinDate">{{devotee.baceJoinDate}}</td>
+						<td [hidden]="!cbaceLeftDate">{{devotee.baceLeftDate}}</td>
+						<td [hidden]="!cfatherName">{{devotee.fatherName}}</td>
+						<td [hidden]="!cemergencyNumber">{{devotee.emergencyNumber}}</td>
+						<td [hidden]="!ccurrentAddress">{{devotee.currentAddress}}</td>
+						<td [hidden]="!cpermanentAddress">{{devotee.permanentAddress}}</td>
+						<td [hidden]="!cActions" style="text-align:right;">
 							<button (click)="edit(devotee)" type="button" style="padding: 4px 8px;" class="btn btn-info">Edit</button>
 							<button (click)="delete(devotee.id)" type="button" style="margin-left:10px;padding: 4px 8px;" class="btn btn-danger">Delete</button>
 						</td>
@@ -92,7 +144,7 @@
 			</table>
 		</div>
 		<div class="col-lg-12" style="text-align:center" [hidden]="devoteesList == undefined || devoteesList.length == 0">
-			<ngb-pagination [collectionSize]="totalPages" [boundaryLinks]="true" [directionLinks]="true" [maxSize]="10" [page]="currentPageNo" [pageSize]="maximumRows" (pageChange)="search($event)"></ngb-pagination>
+			<ngb-pagination [collectionSize]="totalPages" [boundaryLinks]="true" [directionLinks]="true" [maxSize]="10" [page]="currentPageNo" [pageSize]="maximumResults" (pageChange)="search($event)"></ngb-pagination>
 		</div>
 	</div>
 </div>
