--- a/angular2/src/app/login/login.component.html
+++ b/angular2/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <div>
-    <h1>Please Enter the Password</h1>
-    <input placeholder="Password" type="password" required="" [(ngModel)]="password">
-    <button (click)="login()">Login</button>
+	<h1>Please Enter the Password</h1>
+	<input placeholder="Password" type="password" required="" [(ngModel)]="password">
+	<button (click)="login()">Login</button>
 </div>
+<ng2-toasty [position]="'center-center'"></ng2-toasty>
