--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -100,6 +100,12 @@
 					</ul>
 				</div>
 			</div>
+			<div class="form-group" style="margin-right:20px">
+				<div class="input-group">
+					<label for="download" (click)="download()" data-toggle="dropdown" style="cursor:pointer;font-weight:bold;">Download</label>
+					<i (click)="download()" style="cursor:pointer;font-size: 25px;margin-left: 10px;vertical-align: middle;" class="fa fa-download" aria-hidden="true " id="download "></i>
+				</div>
+			</div>
 		</form>
 	</div>
 	<div class="row" style="margin-top:25px;">
