--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -19,22 +19,6 @@
 	<div class="row flex-items-xs-right" style="margin-top:50px;margin-bottom:0px;padding-top:0px;padding-bottom:0px">
 		<form role="form" class="form-inline">
 			<div class="form-group" style="margin-right:20px">
-				<label for="sortBy" style="font-weight:bold">Sort By</label>
-				<select [(ngModel)]="sortBy" (change)="search()" class="form-control" id="sortBy" name="sortBy">
-					<option value="name" selected>Name</option>
-					<option value="dob">Date of Birth</option>
-					<option value="baceJoinDate">Bace joining date</option>
-					<option value="baceLeftDate">Bace left date</option>
-				</select>
-			</div>
-			<div class="form-group" style="margin-right:20px">
-				<label for="order" style="font-weight:bold">Order</label>
-				<select [(ngModel)]="order" (change)="search()" class="form-control" id="order" name="order">
-					<option value="ascending" selected>Ascending</option>
-					<option value="descending">Descending</option>
-				</select>
-			</div>
-			<div class="form-group" style="margin-right:20px">
 				<label for="maximumResults" style="font-weight:bold">Maximum Results</label>
 				<select [(ngModel)]="maximumResults" (change)="search()" class="form-control" id="maximumResults" name="maximumResults">
 					<option selected>10</option>
@@ -53,45 +37,9 @@
 							<input type="checkbox" name="column" [checked]="cSerialNumber" (change)="cSerialNumber=!cSerialNumber">
 							<span class="lbl">Serial Number</span>
 						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cName" (change)="cName=!cName">
-							<span class="lbl">Name</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cbaceJoinDate" (change)="cbaceJoinDate=!cbaceJoinDate">
-							<span class="lbl">Bace Joining Date</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cbaceLeftDate" (change)="cbaceLeftDate=!cbaceLeftDate">
-							<span class="lbl">Bace Left Date</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="ccurrentAddress" (change)="ccurrentAddress=!ccurrentAddress">
-							<span class="lbl">Current Address</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cdob" (change)="cdob=!cdob">
-							<span class="lbl">Date of Birth</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cemail" (change)="cemail=!cemail">
-							<span class="lbl">Email</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cemergencyNumber" (change)="cemergencyNumber=!cemergencyNumber">
-							<span class="lbl">Emergency Number</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cfatherName" (change)="cfatherName=!cfatherName">
-							<span class="lbl">Father's Name</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cmobileNumber" (change)="cmobileNumber=!cmobileNumber">
-							<span class="lbl">Mobile Number</span>
-						</li>
-						<li>
-							<input type="checkbox" name="column" [checked]="cpermanentAddress" (change)="cpermanentAddress=!cpermanentAddress">
-							<span class="lbl">Permanent Address</span>
+						<li *ngFor="let column of columnsList">
+							<input type="checkbox" name="{{column.id}}" [checked]="column.isSelected" (change)="column.isSelected=!column.isSelected">
+							<span class="lbl">{{column.name}}</span>
 						</li>
 						<li>
 							<input type="checkbox" name="column" [checked]="cActions" (change)="cActions=!cActions">
@@ -115,42 +63,43 @@
 				<thead class="thead-inverse">
 					<tr>
 						<th [hidden]="!cSerialNumber">#</th>
-						<th [hidden]="!cName" (click)="updateSortOrder('name')" style="cursor:pointer">Name</th>
-						<th [hidden]="!cmobileNumber">Mobile Number</th>
-						<th [hidden]="!cemail">Email</th>
-						<th [hidden]="!cdob" (click)="updateSortOrder('dob')" style="cursor:pointer">Date of Birth</th>
-						<th [hidden]="!cbaceJoinDate" (click)="updateSortOrder('baceJoinDate')" style="cursor:pointer">Bace Joining Date</th>
-						<th [hidden]="!cbaceLeftDate" (click)="updateSortOrder('baceLeftDate')" style="cursor:pointer">Bace Left Date</th>
-						<th [hidden]="!cfatherName">Father's Name</th>
-						<th [hidden]="!cemergencyNumber">Emergency Number</th>
-						<th [hidden]="!ccurrentAddress">Current Address</th>
-						<th [hidden]="!cpermanentAddress">Permanent Address</th>
+						<th *ngFor="let column of columnsList"
+							[hidden]="!column.isSelected"
+							(click)="updateSortOrder(column.id)"
+							style="cursor:pointer">{{column.name}}</th>
 						<th [hidden]="!cActions"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr *ngFor="let devotee of devoteesList; let i = index">
-						<th [hidden]="!cSerialNumber" scope="row">{{(currentPageNo - 1) * maximumResults + i + 1}}.</th>
-						<td [hidden]="!cName"><a (click)="edit(devotee)" style="1px dotted #373a3c">{{devotee.name}}</a></td>
-						<td [hidden]="!cmobileNumber">{{devotee.mobileNumber}}</td>
-						<td [hidden]="!cemail">{{devotee.email}}</td>
-						<td [hidden]="!cdob">{{devotee.dob}}</td>
-						<td [hidden]="!cbaceJoinDate">{{devotee.baceJoinDate}}</td>
-						<td [hidden]="!cbaceLeftDate">{{devotee.baceLeftDate}}</td>
-						<td [hidden]="!cfatherName">{{devotee.fatherName}}</td>
-						<td [hidden]="!cemergencyNumber">{{devotee.emergencyNumber}}</td>
-						<td [hidden]="!ccurrentAddress">{{devotee.currentAddress}}</td>
-						<td [hidden]="!cpermanentAddress">{{devotee.permanentAddress}}</td>
+						<td [hidden]="!cSerialNumber" scope="row">{{(currentPageNo - 1) * maximumResults + i + 1}}.</td>
+						<td *ngFor="let column of columnsList"
+							[hidden]="!column.isSelected">{{devotee[column.id]}}</td>
 						<td [hidden]="!cActions" style="text-align:right;">
-							<button (click)="edit(devotee)" type="button" style="padding: 4px 8px;" class="btn btn-info">Edit</button>
-							<button (click)="delete(devotee.id)" type="button" style="margin-left:10px;padding: 4px 8px;" class="btn btn-danger">Delete</button>
+							<button (click)="edit(devotee)"
+								type="button"
+								style="padding: 4px 8px;width:65px;"
+								class="btn btn-info">Edit</button>
+							<button (click)="delete(devotee.id)"
+								type="button"
+								style="margin-left:10px;padding: 4px 8px;width:65px;"
+								class="btn btn-danger">Delete</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
-		<div class="col-lg-12" style="text-align:center" [hidden]="devoteesList == undefined || devoteesList.length == 0">
-			<ngb-pagination [collectionSize]="totalResults" [boundaryLinks]="true" [directionLinks]="true" [maxSize]="10" [page]="currentPageNo" [pageSize]="maximumResults" (pageChange)="search($event)"></ngb-pagination>
+		<div class="col-lg-12"
+			style="text-align:center"
+			[hidden]="devoteesList == undefined || devoteesList.length == 0">
+			<ngb-pagination
+				[collectionSize]="totalResults"
+				[boundaryLinks]="true"
+				[directionLinks]="true"
+				[maxSize]="10"
+				[page]="currentPageNo"
+				[pageSize]="maximumResults"
+				(pageChange)="search($event)"></ngb-pagination>
 		</div>
 	</div>
 </div>
