--- a/angular2/src/app/admin/admin.component.html
+++ b/angular2/src/app/admin/admin.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-full navbar-fixed-top navbar-dark bg-inverse">
 	<h1 class="navbar-brand" style="font-weight:bold">Devotees Management</h1>
 	<div class="nav navbar-nav float-xs-right">
+		<a class="nav-item nav-link" (click)="openUploadModal()"><i class="fa fa-upload" aria-hidden="true"></i>Upload</a>
 		<a class="nav-item nav-link" (click)="add()">Add Devotee</a>
 		<a class="nav-item nav-link" (click)="logout()">Logout</a>
 	</div>
